fix new ICalendarWriter implementation and upgrade Okio library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.squareup.okhttp3:okhttp:3.12.6'
+    implementation 'com.squareup.okio:okio:1.17.5'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
