--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,14 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    packagingOptions {
+        exclude 'kotlin/**'
+        exclude '**/*.kotlin_metadata'
+        exclude 'META-INF/*.kotlin_module'
+        exclude 'META-INF/*.version'
+        exclude 'META-INF/com.android.tools/**'
+    }
 }
 
 dependencies {
@@ -40,6 +48,7 @@ dependencies {
     def room_version = "2.2.3"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation 'androidx.fragment:fragment-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
