--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,11 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.1.0"
+    def lifecycle_version = "2.2.0"
     def room_version = "2.2.3"
 
     implementation 'androidx.core:core:1.2.0-rc01'
+    implementation 'androidx.fragment:fragment:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-rc02'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
@@ -42,7 +43,9 @@ dependencies {
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.paging:paging-runtime:2.1.1'
     implementation "androidx.room:room-runtime:$room_version"
