--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,13 +69,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.3'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha04'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
