fix overriding annotationProcessorOptions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.incremental": "true"]
+                arguments += ["room.incremental": "true"]
             }
         }
     }
