exclude DebugProbesKt.bin from release builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
                         '-Xno-receiver-assertions'
                 ]
             }
+
+            packagingOptions {
+                exclude 'DebugProbesKt.bin'
+            }
         }
     }
 
