--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -55,13 +55,8 @@ android {
 
     packagingOptions {
         exclude 'kotlin/**'
-        exclude '**/*.kotlin_metadata'
         exclude 'META-INF/*.kotlin_module'
         exclude 'META-INF/*.version'
-    }
-
-    androidExtensions {
-        features = ["parcelize"]
     }
 }
 
@@ -70,8 +65,7 @@ dependencies {
     def room_version = "2.2.5"
     def okhttp_version = "3.12.12"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.appcompat:appcompat:1.2.0'
