move overridden library resources to a separate resources folder for clarity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            res.srcDirs += 'res-override'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled true
