--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,5 +93,6 @@ dependencies {
         exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
     }
     implementation 'com.squareup.okio:okio:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.11.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
