--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            multiDexEnabled true
+        }
         release {
             minifyEnabled true
             shrinkResources true
@@ -70,6 +73,7 @@ dependencies {
     def lifecycle_version = "2.2.0"
     def room_version = "2.2.6"
     def okhttp_version = "3.12.12"
+    def exoplayer_version = "2.12.2"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -95,4 +99,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:2.9.0'
     implementation 'com.squareup.moshi:moshi:1.11.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:extension-okhttp:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
 }
