--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
     sourceSets {
         main {
-            res.srcDirs += 'res-override'
+            res.srcDirs += 'src/main/res-override'
         }
     }
 
