remove SearchView and search suggestions provider, replace it with an EditText and sample its updates

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ android {
     }
 
     kotlinOptions {
+        freeCompilerArgs = [
+                '-Xopt-in=kotlin.RequiresOptIn'
+        ]
         jvmTarget = "1.8"
     }
 
