--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.TranslucentStatusBar">
             <intent-filter>
@@ -54,6 +55,7 @@
             android:label="@string/event_details" />
         <activity
             android:name=".activities.EventDetailsActivity"
+            android:exported="true"
             android:label="@string/event_details"
             android:parentActivityName=".activities.TrackScheduleActivity">
             <intent-filter>
@@ -81,6 +83,7 @@
         </activity>
         <activity
             android:name=".activities.ExternalBookmarksActivity"
+            android:exported="true"
             android:label="@string/external_bookmarks_title"
             android:parentActivityName=".activities.MainActivity">
             <intent-filter>
@@ -99,6 +102,7 @@
             android:theme="@style/AlertDialogTheme" />
         <activity
             android:name=".activities.SettingsActivity"
+            android:exported="true"
             android:label="@string/settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
