--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.TranslucentStatusBar">
             <intent-filter>
@@ -48,12 +49,15 @@
         </activity>
         <activity
             android:name=".activities.TrackScheduleActivity"
+            android:exported="false"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.TrackScheduleEventActivity"
+            android:exported="false"
             android:label="@string/event_details" />
         <activity
             android:name=".activities.EventDetailsActivity"
+            android:exported="true"
             android:label="@string/event_details"
             android:parentActivityName=".activities.TrackScheduleActivity">
             <intent-filter>
@@ -66,9 +70,11 @@
         </activity>
         <activity
             android:name=".activities.PersonInfoActivity"
+            android:exported="false"
             android:theme="@style/AppTheme.TranslucentStatusBar" />
         <activity
             android:name=".activities.SearchResultActivity"
+            android:exported="true"
             android:label="@string/search_events"
             android:launchMode="singleTop">
             <intent-filter>
@@ -81,6 +87,7 @@
         </activity>
         <activity
             android:name=".activities.ExternalBookmarksActivity"
+            android:exported="true"
             android:label="@string/external_bookmarks_title"
             android:parentActivityName=".activities.MainActivity">
             <intent-filter>
@@ -95,10 +102,12 @@
         <activity
             android:name=".activities.RoomImageDialogActivity"
             android:excludeFromRecents="true"
+            android:exported="false"
             android:taskAffinity=""
             android:theme="@style/AlertDialogTheme" />
         <activity
             android:name=".activities.SettingsActivity"
+            android:exported="true"
             android:label="@string/settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
