--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
                 exclude 'DebugProbesKt.bin'
             }
         }
+        debug {
+            multiDexEnabled = true
+        }
     }
 
     compileOptions {
@@ -77,6 +80,7 @@ dependencies {
     def room_version = "2.3.0"
     def okhttp_version = "3.12.13"
 
+    implementation "androidx.multidex:multidex:2.0.1"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
