remove more metadata files from release build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ android {
             }
 
             packagingOptions {
+                exclude 'androidsupportmultidexversion.txt'
                 exclude 'DebugProbesKt.bin'
+                exclude 'kotlin-tooling-metadata.json'
             }
         }
     }
