- remove SavedStateHandle implementation, restore ViewModel state manually from View state instead - upgrade various libraries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ afterEvaluate {
 
 dependencies {
     def lifecycle_version = "2.4.0"
-    def room_version = "2.4.0"
+    def room_version = "2.4.1"
     def okhttp_version = "3.12.13"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
@@ -110,10 +110,11 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
