--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
+android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
 org.gradle.jvmargs=-Xmx2048m
 
