enable precise resource shrinking

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
+android.experimental.enableNewResourceShrinker.preciseShrinking=true
 org.gradle.jvmargs=-Xmx2048m
 
 # When configured, Gradle will run in incubating parallel mode.
