--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,8 +100,8 @@ afterEvaluate {
 }
 
 dependencies {
-    def lifecycle_version = "2.6.0"
-    def room_version = "2.5.0"
+    def lifecycle_version = "2.6.1"
+    def room_version = "2.5.1"
     def okhttp_version = "3.12.13"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
@@ -111,14 +111,14 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-    implementation 'androidx.drawerlayout:drawerlayout:1.2.0-rc01'
+    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.browser:browser:1.5.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
