--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.8.10'
         hilt_version = '2.45'
-    }
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
-allprojects {
-    repositories {
-        maven {
-            url "https://jitpack.io"
-            content {
-                includeGroup "com.github.chrisbanes"
-            }
-        }
-        google()
-        mavenCentral()
-    }
+plugins {
+    id 'com.android.application' version '8.0.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.45' apply false
 }
