--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         versionCode 1900213
         versionName "2.1.3"
         // Supported languages
-        resourceConfigurations ['en']
+        resourceConfigurations = ['en']
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -46,7 +46,10 @@ android {
                 resources.excludes += [
                         'androidsupportmultidexversion.txt',
                         'DebugProbesKt.bin',
-                        'kotlin-tooling-metadata.json'
+                        'kotlin-tooling-metadata.json',
+                        'kotlin/**',
+                        'META-INF/*.kotlin_module',
+                        'META-INF/*.version'
                 ]
             }
         }
@@ -60,14 +63,6 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-    }
-
-    packagingOptions {
-        resources.excludes += [
-                'kotlin/**',
-                'META-INF/*.kotlin_module',
-                'META-INF/*.version'
-        ]
     }
 }
 
@@ -107,12 +102,12 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
     implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.activity:activity-ktx:1.7.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'androidx.activity:activity-ktx:1.7.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
