--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-parcelize'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.parcelize'
+    id 'com.google.devtools.ksp'
     id 'com.google.dagger.hilt.android'
 }
 
@@ -66,13 +66,6 @@ android {
     }
 }
 
-// Workaround for AGP not setting jvmTarget properly for the kapt task
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KaptGenerateStubs).configureEach {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
 // Update configuration of the R8 tasks to optimize desugaring shrinker
 static def patchDesugarConfig(Property<String> config) {
     def patchedDesugarConfig = config.getProvider().map {
@@ -101,7 +94,7 @@ dependencies {
 
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    ksp "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
@@ -120,7 +113,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-paging:$room_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation("com.squareup.okhttp3:okhttp-tls:$okhttp_version") {
         exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
