--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        hilt_version = '2.47'
+        hilt_version = '2.48'
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
-    id 'com.google.dagger.hilt.android' version '2.47' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    id "com.google.devtools.ksp" version "1.9.10-1.0.13" apply false
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
 }
