chore: migrate to Kotlin DSL and upgrade dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@ android.defaults.buildfeatures.buildconfig=true
 android.experimental.enableNewResourceShrinker.preciseShrinking=true
 org.gradle.jvmargs=-Xmx2048m
 
+hiltVersion=2.48.1
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
