--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
-androidGradlePlugin = "8.3.2"
+androidGradlePlugin = "8.4.0"
 androidx-activity = "1.9.0"
 androidx-appcompat = "1.6.1"
 androidx-browser = "1.8.0"
 androidx-coordinatorlayout = "1.2.0"
-androidx-core = "1.13.0"
-androidx-datastore = "1.1.0"
+androidx-core = "1.13.1"
+androidx-datastore = "1.1.1"
 androidx-drawerlayout = "1.2.0"
-androidx-fragment = "1.6.2"
+androidx-fragment = "1.7.0"
 androidx-lifecycle = "2.7.0"
 androidx-paging = "3.2.1"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
-androidx-viewpager2 = "1.1.0-beta02"
+androidx-viewpager2 = "1.1.0-rc01"
 desugarJdkLibs = "2.0.4"
 hilt = "2.51.1"
 kotlin = "1.9.23"
