--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,18 +7,18 @@ androidx-coordinatorlayout = "1.2.0"
 androidx-core = "1.13.1"
 androidx-datastore = "1.1.1"
 androidx-drawerlayout = "1.2.0"
-androidx-fragment = "1.7.0"
-androidx-lifecycle = "2.7.0"
-androidx-paging = "3.2.1"
+androidx-fragment = "1.7.1"
+androidx-lifecycle = "2.8.0"
+androidx-paging = "3.3.0"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
-androidx-viewpager2 = "1.1.0-rc01"
+androidx-viewpager2 = "1.1.0"
 desugarJdkLibs = "2.0.4"
 hilt = "2.51.1"
-kotlin = "1.9.23"
-kotlinx-coroutines = "1.8.0"
-ksp = "1.9.23-1.0.20"
+kotlin = "1.9.24"
+kotlinx-coroutines = "1.8.1"
+ksp = "1.9.24-1.0.20"
 material = "1.12.0"
 moshi = "1.15.1"
 okhttp = "4.12.0"
