--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,11 +16,11 @@ jobs:
     - name: set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
         distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+        java-version: '21'
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        validate-wrappers: true
     - name: Build with Gradle
       run: ./gradlew clean assembleRelease
