--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true"
-            android:theme="@style/AppTheme.TranslucentStatusBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,8 +64,7 @@
             android:parentActivityName=".activities.TrackScheduleActivity" />
         <activity
             android:name=".activities.PersonInfoActivity"
-            android:exported="false"
-            android:theme="@style/AppTheme.TranslucentStatusBar" />
+            android:exported="false" />
         <activity
             android:name=".activities.SearchResultActivity"
             android:exported="true"
