chore: upgrade to AGP 9 and Kotlin 2.3.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "8.13.2"
+androidGradlePlugin = "9.0.0"
 androidx-activity = "1.12.2"
 androidx-appcompat = "1.7.1"
 androidx-browser = "1.9.0"
@@ -15,10 +15,10 @@ androidx-recyclerview = "1.4.0"
 androidx-room = "2.8.4"
 androidx-viewpager2 = "1.1.0"
 desugarJdkLibs = "2.1.5"
-hilt = "2.58"
-kotlin = "2.2.21"
+hilt = "2.59"
+kotlin = "2.3.0"
 kotlinx-coroutines = "1.10.2"
-ksp = "2.2.21-2.0.4"
+ksp = "2.3.4"
 material = "1.13.0"
 moshi = "1.15.2"
 okhttp = "5.3.2"
@@ -28,7 +28,6 @@ photoview = "2.3.0"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
